force-app/main/default/objects/Lead/fields/Actual_Call_TAT_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Call_TAT_Hours__c</fullName>
    <label>Actual Call TAT (Hours)</label>
    <inlineHelpText>Actual hours taken from lead assignment (Enquiry Date) to the first call.</inlineHelpText>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>