force-app/main/default/objects/Lead/fields/Call_TAT_Breached__c.field-meta.xml
<CustomField>
    <fullName>Call_TAT_Breached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call TAT Breached</label>
    <inlineHelpText>Set automatically when the first call was made later than the project's TAT allows.</inlineHelpText>
    <type>Checkbox</type>
</CustomField>