force-app/main/default/objects/Lead/fields/First_Followup_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Followup_Time__c</fullName>
    <label>First Followup Time</label>
    <inlineHelpText>Timestamp captured when the first follow-up is created for this lead. Used for follow-up TAT calculation.</inlineHelpText>
    <type>DateTime</type>
</CustomField>