force-app/main/default/objects/Lead/fields/Followup_TAT_Breached__c.field-meta.xml
<CustomField>
    <fullName>Followup_TAT_Breached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Followup TAT Breached</label>
    <inlineHelpText>Set automatically when the first follow-up was created later than the project's TAT allows.</inlineHelpText>
    <type>Checkbox</type>
</CustomField>