force-app/main/default/objects/Lead/fields/Lead_Assigned_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Assigned_Time__c</fullName>
    <label>Lead Assigned Time</label>
    <inlineHelpText>Timestamp captured when the lead is assigned to a user. Used as the start point for TAT calculation.</inlineHelpText>
    <type>DateTime</type>
</CustomField>